--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "flatpickr": "^4.6.13",
     "modern-normalize": "^1.1.0",
+    "mongodb": "^5.2.0",
+    "notiflix": "^3.2.6",
     "simplelightbox": "^2.13.0"
   },
   "devDependencies": {
